--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "3.1.0"
+  },
+  "dependencies": {
+    "electron-tabs": "^1.0.2"
   }
 }
